<resources>
    <string name="app_name">手账</string>
    <string name="login_label_username">手机号：</string>
    <string name="login_username_hint">请输入11位大陆手机号</string>
    <string name="login_label_pwd">密码：</string>
    <string name="login_label_re_pwd">重复密码：</string>
    <string name="login_pwd_hint">请输入密码</string>
	<string name="reg_phone_code">短信验证码</string>
    <string name="login_re_pwd_hint">请再次输入密码</string>
    <string name="login">登陆</string>
    <string name="have_account">已有账号？</string>
    <string name="forgot_pwd">忘记密码？</string>
    <string name="register">注册</string>
    <string name="find_back">重置</string>
    <string name="rem_pwd">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="other_platform">第三方平台   QQ</string>

    <!--日历-->
    <string name="sunday">日</string>
    <string name="monday">一</string>
    <string name="thesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>
    <string name="title_activity_date_acitvity2">主页</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="help">
        Schedule Book 帮助页面\n
		1：账号\n
	\t此应用采用【手机号】作为唯一账号，经注册后可以采用账号+密码的方式登陆。\n
	\t账号与用户数据绑定，用户可以通过一个账号将数据同步到不同的设备上。\n
	\t短信验证码将作为【重置密码】的唯一途径，应用暂不支持账号的更换，请务必保证手机号的可用性。\n
2：	日程管理\n
	\t2.1 日程状态\n
		\t\t日程分为三种状态【待完成】、【已完成】、【已取消】\n
	\t2.2 日程分类\n
		\t\t日程采用【四色手杖法】进行日程分类：\n
		\t\t红色——健康（重要事项） 绿色——私事（幸福的颜色） 蓝色——工作（冷静） 黑色——杂事（琐碎）\n
	\t2.3 日程添加\n
		\t\t用户可以通过主页日历选择某一具体日期进入【日程管理】页面，页面将会显示当天所有的日程。点击右下角按钮进行新建。\n
	\t2.4 日程取消\n
		\t\t指定日程项【右滑】操作取消日程，取消的日程并不会直接删除，而是作为【已取消】状态显示在列表中（可以通过右上角按钮选择隐藏），提醒用户请勿随意制定日程。\n
	\t2.5 日程完成\n
		\t\t指定日程项【左滑】操作完成日程。\n
	\t2.6 日历修改\n
		\t\t单机日历项，进行修改操作。\n
	\t2.7 日程查询\n
		\t\t用户可以通过主页日历页面右下角查询按钮进行所有日程的查询。\n
3：计划管理\n
	\t3.1 计划种类\n
		\t\t计划分为【月计划】、【周计划】\n
	\t3.2 子计划\n
	\t\t为每一项计划添加子计划，并设立【完成按钮】，但不能给子计划添加子计划。\n
	\t3.3 计划不可修改、删除\n
	\t\t所有设立好的【计划】、【子计划】均不可删除、修改，提醒用户制定计划需谨慎。\n
4：笔记管理\n
	\t4.1 笔记添加\n
		\t\t在【笔记管理】主界面点击右下角按钮进行添加，笔记支持【图文混排】，添加成功后分【标题】和【内容】显示在主界面。\n
	\t4.2 笔记查看、修改\n
		\t\t点击指定笔记项进行详情查看，点击右上角按钮进行编辑。\n
	\t4.3 笔记删除\n
		\t\t在【笔记管理】主界面长按笔记项进行删除，删除的笔记不可恢复，请谨慎删除！\n
5：同步\n
	\t将【云端数据】同步到【本地】。\n
6：作者\n
	\thust_hc@126.com.\n
    </string>

</resources>
